--- a/includes/css/custom.css
+++ b/includes/css/custom.css
@@ -4,6 +4,7 @@ body {
 	background: #404040;
 }
 body {
+	padding: 0px 10px 0px 10px;
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
@@ -13,6 +14,16 @@ h1 {
 }
 h2 {
 	font-size: 5vw;
+	line-height: 150%;
+}
+
+#text-1,
+#text-2,
+#text-3,
+#text-4,
+#text-5,
+#text-6 {
+	display: none;
 }
 .wrapper {
 	display: table;
@@ -25,7 +36,7 @@ h2 {
 	vertical-align: middle;
 }
 .tooltip.bottom .tooltip-inner {
-	max-width:250px;
+	max-width:500px;
 	padding:4px 10px;
 	color:#404040;
 	text-align: center;
